Try to put only the files under .kde-ci-packages in the artifacts
Without the '*' the .kde-ci-packages folder is also put into the
artifacts.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -101,7 +101,7 @@ craft_windows_x86_64:
     when: on_success
     expose_as: "Windows"
     paths:
-     - ".kde-ci-packages/"
+     - ".kde-ci-packages/*"
 
 craft_playground:
   stage: deploy
