--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,9 +129,11 @@ craft_playground:
     - Get-ChildItem C:\Gitlab\Craft\ | Remove-Item -Recurse -Force
     - git clone https://invent.kde.org/packaging/craftmaster --branch=master
     - git clone https://invent.kde.org/sysadmin/ci-utilities
+    # Define a short cut for the lengthy CraftMaster command line
+    - function Run-CraftMaster { python craftmaster/CraftMaster.py --config $env:KDECI_CRAFT_CONFIG --config-override $env:KDECI_CRAFT_PROJECT_CONFIG --target $env:KDECI_CRAFT_PLATFORM $args }
     # Get Craft itself ready
-    - python craftmaster/CraftMaster.py --config $env:KDECI_CRAFT_CONFIG --config-override $env:KDECI_CRAFT_PROJECT_CONFIG --target $env:KDECI_CRAFT_PLATFORM -c -i --options virtual.ignored=True --update craft
+    - Run-CraftMaster -c -i --options virtual.ignored=True --update craft
   script:
-    - $packageAppx = craftmaster/CraftMaster.py --config $env:KDECI_CRAFT_CONFIG --config-override $env:KDECI_CRAFT_PROJECT_CONFIG --target $env:KDECI_CRAFT_PLATFORM -c --get subinfo.options.dynamic.packageAppx $env:CI_PROJECT_NAME
+    - $packageAppx = Run-CraftMaster -c --get subinfo.options.dynamic.packageAppx $env:CI_PROJECT_NAME
     - echo $packageAppx
     - if ($packageAppx -eq "True") { echo "Package as AppX" } else { echo "Skip packaging as AppX" }
