--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,5 +7,8 @@ include:
 #   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/windows.yml
 #   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/linux-qt6.yml
 #   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/freebsd-qt6.yml
-   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/craft-appimage.yml
-   - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/craft-windows-x86-64.yml
+  - https://invent.kde.org/sysadmin/ci-utilities/raw/master/gitlab-templates/craft-appimage.yml
+  - project: sysadmin/ci-utilities
+    ref: work/kloecker/use-project-includes
+    file:
+      - /gitlab-templates/craft-windows-x86-64.yml
